--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     <style>
      body{
-       background: url("../static/back.jpg") no-repeat;
-       background-size: 100%; /* Современные браузеры */
+       background: url("../static/back.jpg") no-repeat ;
+       background-size: 100%; 
+       background-attachment: fixed;
       }
     </style>
   </body>
